--- a/app/globals.css
+++ b/app/globals.css
@@ -21,4 +21,22 @@
   .h6 {
     @apply text-base font-normal leading-relaxed;
   }
+  .body1 {
+    @apply font-barlow text-base font-normal leading-relaxed;
+  }
+  .body2 {
+    @apply font-barlow text-sm font-normal leading-relaxed;
+  }
+  .subtitle1 {
+    @apply font-barlow-bold text-base font-semibold leading-snug;
+  }
+  .subtitle2 {
+    @apply font-barlow-bold text-sm font-semibold leading-snug;
+  }
+  .caption {
+    @apply font-barlow text-xs font-normal leading-snug;
+  }
+  .overline {
+    @apply font-barlow text-xs font-semibold uppercase tracking-wide leading-snug;
+  }
 }
